Add Role to JWT and connect to Role table